[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-surveillance-forecasting-platform"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "fastapi>=0.110",
  "uvicorn>=0.25",
  "pydantic>=2.0",
  "streamlit>=1.28",
  "typer>=0.12",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pymc>=5.10",
  "arviz>=0.16",
  "scipy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cdc = "cdc_platform.cli.main:main"